# hate_cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
benchmark/: CMakeLists.txt  main.cpp
include/: mylibrary.hpp
scripts/: build.py
src/: mylibrary.cpp
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
